# eduSystem

./: .dockerignore  .flake8  .gitignore  .pylintrc  .replit  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: ci.yml  django-authentication-system.yml  django.yml
core/: admin.py  apps.py  backends.py  err_handler.py  forms.py  managers.py  middleware.py  mixins.py  models.py  signals.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  views.py
core/auth/: login.py  logout.py  signup.py  socialAuth.py
core/auth/email/: contactus.py  email_verification.py
core/auth/password/: password_change.py  password_reset.py
core/management/commands/: codeFormatting.py  makesuper.py  runtests.py
core/migrations/: 0001_initial.py
core/users/: delete.py  details.py
django_project/: celery.py  settings.py  urls.py
django_project/static/css/: style.css
django_project/static/js/: main.js
media/css/: bootstrap.min.css
templates/: base.html  err_handler.html
templates/core/: index.html
templates/core/auth/email/: contactus.html  email_verification.html  email_verification.txt  email_verification_subject.txt  verification_invalid.html
templates/core/auth/password/: password_reset_complete.html  password_reset_confirm_email.html  password_reset_confirm_subject.txt  password_reset_done.html  (+2 more)
templates/core/registration/: form.html  signup.html
templates/includes/: footer.html  messages.html  navbar.html
templates/test/: email_template.html
templates/users/: details.html
