[tool.poetry]
authors = ["Habib <noreply@gmail.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^5.0"
python = "^3.10"
pillow = "10.4.0"
python-environ = "0.4.54"
todo = "0.1"
django-crispy-forms = "2.3"
crispy-bootstrap5 = "2024.2"
autoflake = "2.3.1"
autoflake8 = "0.4.1"
black = "24.8.0"
isort = "5.13.2"
six = "1.16.0"
django-utils-six = "2.0"
celery = "5.4.0"
pylint = "3.3.1"
psycopg2-binary = "2.9.9"
django-debug-toolbar = "4.4.6"
[tool.poetry.dev-dependencies]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"